--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react": "^16.8.0",
+    "react-component-transition": "^2.0.1",
+    "react-dom": "^16.8.0",
+    "react-scripts": "^2.1.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
