--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.2.0",
     "jquery": "^3.6.0",
     "react": "^16.8.0",
+    "react-chartjs-2": "^3.0.2",
     "react-component-transition": "^2.0.1",
     "react-dom": "^16.8.0",
     "react-scripts": "^2.1.1",
